<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">哪找货</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码</string>
    <string name="pwd_find">密码找回</string>
    <string name="cancel">取消</string>
    <string name="button_return">返回</string>
    <string name="favorite">收藏</string>
    <string name="myfavorite">我的收藏</string>
    <string name="quit_favorite">已收藏</string>
    <string name="error_invalid_password">密码应大于4位</string>
    <string name="iphone_dlg_btn_ok_str">Confirm</string>
    <string name="iphone_dlg_btn_cancel_str">Cancel</string>
    <string name="promot_download_error_title">Error</string>
    <string name="promot_download_error_msg">Download failed, please check network connection or SD card</string>
    <string name="operator_ch_unicom">CUCC</string>
    <string name="operator_ch_mobile">CMCC</string>
    <string name="operator_ch_telecom">CTCC</string>
    <string name="world_clock">World Clock</string>
    <string name="alarm">Alarm</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="lap">Lap</string>
    <string name="lap_prefix">"lap "</string>
    <string name="continues">continue</string>
    <string name="hour">hours</string>
    <string name="minutes">mins</string>
    <string name="save">Save</string>
    <string name="repeat">Repeat</string>
    <string name="monday">Every Monday</string>
    <string name="tuesday">Every TuesDay</string>
    <string name="wendesday">Every Wendesday</string>
    <string name="thursday">Every Thursday</string>
    <string name="friday">Every Friday</string>
    <string name="staturday">Every Saturday</string>
    <string name="sunday">Every Sunday</string>
    <string name="returns">Back</string>
    <string name="every_day">every day</string>
    <string name="alarm_alert_snooze_text">Caulk Off</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <!-- Default label to display for an alarm -->
    <string name="default_label">Alarm</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="download">Download</string>
    <string name="edit">Edit</string>
    <string name="finish">Done</string>
    <string name="delete">Delete</string>
    <string name="title">Label</string>
    <string name="net_message">You have no network links ！</string>
    <string name="download_finish">Download the complete </string>
    <string name="downlaoding">Is being downloaded</string>
    <string name="default_alarm">Default</string>
    <string name="time_over">When Timer Ends</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="sound">Sound</string>
    <string name="snooze">Snooze</string>
    <string name="label">Label</string>
    <string name="dialog_message">Timer Done</string>
    <string name="search_title">Search for a city to add to world clock.</string>
    <string name="message">Do you want to experience a iphone4S?Please use the Espier Launcher,and a variety of gestures,smooth sliding,A second make your phone change to iphone!</string>
    <string name="alarm_notify_text">Snooze or dismiss alarm.</string>
    <!-- Text to display in the notification ticker and label -->
    <!-- Text to display in the notification ticker and label -->
    <string name="alarm_notify_snooze_label"> (snoozed)</string>

    <!-- Text to display in the notification when the alarm has been snoozed -->
    <string name="alarm_notify_snooze_text">Alarm set for Touch to cancel.</string>
    <string name="no_world_clock">No world clock</string>
    <string name="time_zone_name">Beijing</string>
    <string name="time_zone_name_id">Beijing</string>
    <string name="timezone">Asia/Shanghai</string>
    <string name="am_text">AM</string>
    <string name="pm_text">PM</string>
    <string name="no_sdcard">The current sd card, not with </string>
    <string name="content_description">the background of world clock </string>

    <!-- Text to display in actual title of GoodActivity -->
    <string name="goods_title">查找 </string>
    <string name="map_title">货源</string>
    <string name="profile_title">我的</string>
    <string name="rss_title">订阅</string>
    <string name="departure">出发地：</string>
    <string name="destination">到达地：</string>
    <string name="goods_type">货物类型</string>
    <string name="goods_weight">货物重量</string>
    <string name="search">查询</string>
    <string name="title_activity_good_result">货运结果</string>
    <string name="no_data">No data</string>
    <string name="title_activity_map">货运信息</string>
    <string name="usr_name">用  户  名:</string>
    <string name="phone">手机号码:</string>
    <string name="password">密码:</string>
    <string name="role_id">身份:</string>
    <string name="seperator">===========================</string>
    <string name="cur_deal">当前交易</string>
    <string name="his_deal">历史交易</string>
    <string name="change_password">修改密码</string>
    <string name="change_phone">修改手机号</string>
    <string name="title_activity_profile_current_deal">ProfileCurrentDealActivity</string>
    <string name="title_activity_profile_history_deal">ProfileHistoryDealActivity</string>
    <string name="title_activity_profile_change_password">ProfileChangePasswordActivity</string>
    <string name="title_activity_profile_change_phone">ProfileChangePhoneActivity</string>
    <string name="old_password">旧密码:</string>
    <string name="new_password">新密码:</string>
    <string name="old_phone">旧手机号:</string>
    <string name="new_phone">新手机号:</string>
    <string name="psw_confirm">密码确认:</string>
    <string name="set_password">密        码:</string>
    <string name="confirm">确    认:</string>
    <string name="confirm1">确认</string>
    <string name="submit">提交</string>
    <string name="result_show">结果显示</string>
    <string name="title_activity_good_result_detail">GoodResultDetailActivity</string>
    <string name="title_activity_profile_current_deal_detail">ProfileCurrentDealDetailActivity</string>
    <string name="title_activity_profile_history_deal_detail">ProfileHistoryDealDetailActivity</string>
    <string name="cur_deal_detail">当前交易详情</string>
    <string name="his_deal_detail">历史交易详情</string>
    <string name="goods_search_detail">货运信息详情</string>
    <string name="details">详情</string>
    <string name="submit_order">确认</string>
    <string name="notify_source">确认</string>
    <string name="current_deal">当前交易</string>
    <string name="history_deal">历史交易</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login_detail">LoginDetailActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="rememberpassword">记住密码</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_last_numb">更新数目：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="refreshtime">提醒间隔</string>
    <string name="title_activity_web_display">网站信息</string>
    <string name="title_activity_rss">订阅</string>
    <string name="questionforpassword">密保问题： </string>
    <string name="question">你的幸运数字是几？ </string>
    <string name="answerforpassword">密保答案： </string>
    <string name="cities">订阅城市</string>
    <string name="add_city">添加</string>
    <string name="delete_city">删除城市</string>
    <string name="pushlist">提醒消息</string>
    <string name="title_activity_truck">车源</string>
    <string name="title_activity_profile_pushlist">推送历史</string>
    <string name="hint_your_address">您的地址</string>
    <string name="hint_your_dep">请输入出发地</string>
    <string name="hint_your_des">请输入到达地</string>
    <string name="details_dep">出  发  地：</string>
    <string name="details_des">到  达  地：</string>
    <string name="details_pub_t">发布时间：</string>
    <string name="details_dead_t">截止时间：</string>
    <string name="details_name">货物名称：</string>
    <string name="details_type">货物类型：</string>
    <string name="details_vol">货物体积：</string>
    <string name="details_wei">货物质量：</string>
    <string name="details_type_v">货车类型：</string>
    <string name="details_len_v">货车长度：</string>
    <string name="details_pack">包装方式：</string>
    <string name="details_fee">预计费用：</string>
    <string name="details_contact">联系方式：</string>
    <string name="details_danger">注意事项：</string>
    <string name="details_note">        备注：</string>
    <string name="login_website">登录网站链接</string>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_good_fragment">GoodFragmentActivity</string>
    <string name="title_activity_map_fragment">MapFragmentActivity</string>
    <string name="title_activity_rssfragment">RSSFragmentActivity</string>
    <string name="title_activity_profile_fragment">ProfileFragmentActivity</string>

</resources>
