<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2013 FMSoft (http://www.fmsoft.cn)
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eeeeee"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:background="@drawable/ic_tabs_bg"
        >
        <Button
            android:id="@+id/return_btn"
            android:layout_width="50dip"
            android:layout_height="25dip"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:text="@string/button_return"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/ic_button_return"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18dip"
            style="@style/titleTextStyle"
            />

    </RelativeLayout>
    
     <TableLayout
                    android:id="@+id/profile_top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_layout"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="24dp" >
            	<TableRow android:layout_width="match_parent"
                    android:background="#ffffff"
                    >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="150dp"
                            android:layout_height="45dip"
                            android:ems="10"
                            android:background="@null"
                            android:inputType="phone" />

                </TableRow>
                
            	<TableRow android:layout_width="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="#ffffff">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/set_password"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="150dp"
                            android:layout_height="45dip"
                            android:ems="10"
                            android:background="@null"
                            android:inputType="textWebPassword"/>
                </TableRow>

         <TableRow android:layout_width="match_parent"
             android:layout_marginTop="2dp"
             android:background="#ffffff"
             >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/psw_confirm"
                 android:textSize="20sp" />

             <EditText
                 android:id="@+id/psw_confirm"
                 android:layout_width="150dp"
                 android:layout_height="45dip"
                 android:ems="10"
                 android:background="@null"
                 android:inputType="textWebPassword" />
         </TableRow>
                
            	<TableRow android:layout_width="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="#ffffff"
                    >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/usr_name"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/usr_name"
                            android:layout_width="150dp"
                            android:layout_height="45dip"
                            android:ems="10"
                            android:background="@null"
                            android:inputType="textPersonName" />
                </TableRow>
              <!--   
            	<TableRow android:layout_width="match_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/role_id"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/role_id"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            />

                </TableRow>
            	 -->
            	 
            	 <TableRow android:layout_width="match_parent"
                     android:layout_marginTop="20dp"
                     android:background="#ffffff"
                     >
           

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="45dip"
                            android:gravity="center"
                            android:text="@string/questionforpassword"
                            android:textSize="20sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="45dip"
                            android:gravity="center"
                            android:text="@string/question"
                            android:textSize="20sp" />
                </TableRow>
                
            	 <TableRow android:layout_width="match_parent"
                     android:layout_marginTop="2dp"
                     android:background="#ffffff">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answerforpassword"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/answer"
                            android:layout_width="150dp"
                            android:layout_height="45dip"
                            android:ems="10"
                            android:background="@null"
                            android:inputType="textPersonName" />
                </TableRow>
            	            	
            	<Button
            	    		android:id="@+id/register"
                            android:text="@string/register"
                            android:layout_height="45dip"
                            android:background="#ff9700"
                    		android:layout_gravity="center_horizontal"
                    		android:layout_weight="1"
                            android:textColor="#ffffff"
                            android:textSize="20sp" />
            <!--
            	<Button
            	    		android:id="@+id/test"
                            android:layout_width="wrap_content"
                            android:text="test"
                            android:layout_height="0dip"
                    		android:layout_gravity="center_horizontal"
                    		android:layout_weight="1"
                            android:textSize="20sp" />
            -->	
            	
        	</TableLayout>



</RelativeLayout>